--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <img src="images/icon.png" alt="プロフィール画像">
                 </div>
                 <div class="about-text">
-                    <p>こんにちは、氷雨です。</p>
+                    <p>こんにちは、ひさめです。</p>
                     <p>主に美少女ゲームのイラストを描いています。</p>
                     <p>今後攻略したゲームなどのキャラクターも描いていく予定です。</p>
                     <p>DiscordやPixivなどもあるので見ていってください！</p>
@@ -286,4 +286,5 @@
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
