--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <div class="contact-content">
                 <p>ボタンから各サイトに飛べます。</p>
                 <div class="social-links">
-                    <a href="https://x.com/Hisame_paint" class="social-link">
+                    <a href="https://x.com/Hisame_float" class="social-link">
                     <img src="images/twit.png" alt="twitter">
                     </a>
                     <a href="https://pixiv.me/hisame_float" class="social-link">
@@ -288,3 +288,4 @@
 </body>
 
 </html>
+
